# douka

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml  doc.yaml
benchmark/: CMakeLists.txt
benchmark/common/: compute.cc
cmake/: dependencies.cmake  doc.cmake  install.cmake  plugin_install.cmake  plugin_status.cmake  status.cmake
cmake/template/: config.cmake.in  douka_version.hh.in  setup-env.sh.in
doc/: Doxyfile.in  requirements.txt
doc/source/: conf.py  create-plugin.rst  index.rst  installation.rst  json-matrix-handle.rst  json-schema-type.rst  usage-filter.rst  usage-init.rst  usage-obsgen.rst  usage-predict.rst  usage.rst
include/douka/: io.hh  plugin_interface.hh  plugin_register_macro.hh
schemas/: douka.filter-enkf.json  douka.init.json  douka.obs.json  douka.obsgen.json  douka.predict.json  douka.state.json  douka.type.json
src/: command.hh  main.cc
src/command/: filter.cc  filter.hh  init.cc  init.hh  obsgen.cc  obsgen.hh  predict.cc  predict.hh
src/common/: compute.hh  io.cc  io.hh
src/filter/: enkf.cc  enkf.hh  particle.cc  particle.hh
test/: CMakeLists.txt
test/cli/: entry.sh  filter-help.sh  filter-invalid1.sh  filter-valid1.sh  filter-valid2.sh  help.sh  init-help.sh  init-invalid1.sh  init-valid1.sh  init-valid2.sh  obsgen-help.sh  obsgen-valid1.sh  predict-invalid1.sh  predict-valid1.sh  predict-valid2.sh  version.sh
test/cli/inc/: common.sh
test/command/: filter.cc  init.cc  obsgen.cc  predict.cc
test/common/: compute.cc
test/filter/: enkf.cc
test/init/: init.cc
test/obsgen/: obsgen.cc  sample_plugin.cc
test/predict/: predict.cc  sample_invalid_plugin.cc  sample_plugin.cc
